--- a/po/nb.po
+++ b/po/nb.po
@@ -1,20 +1,28 @@
 # Norwegian bokml translation of gnome-themes-standard.
 # Copyright (C) 2010 gnome-themes-standard's package authors.
 # This file is distributed under the same license as the gnome-themes-standard package.
-# Kjartan Maraas <kmaraas@gnome.org>, 2010.
 #
+# Kjartan Maraas <kmaraas@gnome.org>, 2010.
+# Torstein Adolf Winterseth <kvikende@fsfe.org>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-themes-standard\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-10-30 14:36+0200\n"
-"PO-Revision-Date: 2010-10-30 14:39+0200\n"
-"Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
-"Language-Team: Norwegian bokmål <i18n-nb@lister.ping.uio.no>\n"
-"Language: \n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug."
+"cgi?product=gnome-themes-standard&component=general\n"
+"POT-Creation-Date: 2010-11-10 20:51+0000\n"
+"PO-Revision-Date: 2010-12-30 21:36+0100\n"
+"Last-Translator: Torstein Adolf Winterseth <kvikende@fsfe.org>\n"
+"Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
+"X-Generator: Lokalize 1.1\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+
+#: ../themes/Adwaita/backgrounds/adwaita.xml.in.in.h:1
+msgid "Default Background"
+msgstr "Forvalgt bakgrunn"
 
 #: ../themes/Adwaita/index.theme.in.h:1
 msgid "Adwaita"
@@ -22,8 +30,5 @@ msgstr "Adwaita"
 
 #: ../themes/Adwaita/index.theme.in.h:2
 msgid "There is only one"
-msgstr "Det finnes bare en"
+msgstr "Det finnes bare én"
 
-#: ../themes/Adwaita/backgrounds/adwaita.xml.in.in.h:1
-msgid "Default Background"
-msgstr "Forvalgt bakgrunn"
