--- a/po/et.po
+++ b/po/et.po
@@ -1,25 +1,25 @@
 # GNOME standardteemade eesti keele tõlge.
 # Estonian translation of GNOME Themes Standard.
 #
-# Copyright (C) 2010 The GNOME Project.
+# Copyright (C) 2010, 2011 The GNOME Project.
 #
 # This file is distributed under the same license as the gnome-themes-standard
 # package.
-# Ivar Smolin <okul linux ee>, 2010.
+# Ivar Smolin <okul linux ee>, 2010, 2011.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gnome-themes-standard master\n"
+"Project-Id-Version: gnome-themes-standard MASTER\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "themes-standard&component=general\n"
 "POT-Creation-Date: 2010-12-14 21:08+0000\n"
-"PO-Revision-Date: 2010-11-11 08:23+0200\n"
+"PO-Revision-Date: 2011-01-09 17:44+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <et@li.org>\n"
-"Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: et\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Default Background"
@@ -29,4 +29,4 @@ msgid "Adwaita"
 msgstr "Adwaita"
 
 msgid "There is only one"
-msgstr ""
+msgstr "Ainult üks ongi"
