--- a/po/bg.po
+++ b/po/bg.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gnome-themes-standard master\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-01-12 23:54+0200\n"
-"PO-Revision-Date: 2011-01-12 23:54+0200\n"
+"PO-Revision-Date: 2011-01-13 00:11+0200\n"
 "Last-Translator: Alexander Shopov <ash@kambanaria.org>\n"
 "Language-Team: Bulgarian <dict@fsa-bg.org>\n"
 "Language: bg\n"
@@ -23,7 +23,7 @@ msgstr "Стандартен фон"
 
 #: ../themes/Adwaita/index.theme.in.h:1
 msgid "Adwaita"
-msgstr "Адуайта"
+msgstr "Адвайта"
 
 #: ../themes/Adwaita/index.theme.in.h:2
 msgid "There is only one"
