--- a/po/ug.po
+++ b/po/ug.po
@@ -4,14 +4,16 @@
 # Gheyret Kenji<gheyret@yahoo.com>,2010.
 # Sahran <sahran.ug@gmail.com>, 2010.
 # Zeper <zeper@msn.com>, 2010.
-#
+# Temkin <temkin119@gmail.com>
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-themes-standard\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-themes-standard&component=general\n"
-"POT-Creation-Date: 2010-11-21 12:53+0000\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
+"themes-standard&component=general\n"
+"POT-Creation-Date: 2011-02-08 20:59+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Gheyret Kenji<gheyret@yahoo.com>\n"
+"Last-Translator: Temkin <temkin119@gmail.com>\n"
 "Language-Team: Uyghur Computer Science Association <UKIJ@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,8 +25,8 @@ msgstr "كۆڭۈلدىكى تەگلىك"
 
 #: ../themes/Adwaita/index.theme.in.h:1
 msgid "Adwaita"
-msgstr ""
+msgstr "Adwaita"
 
 #: ../themes/Adwaita/index.theme.in.h:2
 msgid "There is only one"
-msgstr ""
+msgstr "پەقەت بىرىلا بار"
