--- a/po/it.po
+++ b/po/it.po
@@ -1,17 +1,17 @@
 # Italian translation for gnome-themes-standard.
-# Copyright (C) 2010 gnome-themes-standard's COPYRIGHT HOLDER
+# Copyright (C) 2010, 2011 gnome-themes-standard's Free Software Foundation, Inc.
 # This file is distributed under the same license as the gnome-themes-standard package.
-# Luca Ferretti <lferrett@gnome.org>, 2010.
+# Luca Ferretti <lferrett@gnome.org>, 2010, 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-themes-standard master\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
-"themes-standard&component=general\n"
-"POT-Creation-Date: 2010-11-11 07:17+0000\n"
-"PO-Revision-Date: 2010-11-11 13:54+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2011-03-01 21:35+0100\n"
+"PO-Revision-Date: 2011-03-01 21:36+0100\n"
 "Last-Translator: Luca Ferretti <lferrett@gnome.org>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -31,3 +31,27 @@ msgstr "Adwaita"
 #: ../themes/Adwaita/index.theme.in.h:2
 msgid "There is only one"
 msgstr "Il solo e l'unico"
+
+#: ../themes/HighContrast/index.theme.in.h:1
+msgid "High Contrast"
+msgstr "Contrasto elevato"
+
+#: ../themes/HighContrast/index.theme.in.h:2
+msgid "High contrast theme"
+msgstr "Tema a contrasto elevato"
+
+#: ../themes/HighContrastInverse/index.theme.in.h:1
+msgid "High Contrast Inverse"
+msgstr "Contrasto elevato inverso"
+
+#: ../themes/HighContrastInverse/index.theme.in.h:2
+msgid "High contrast inverse theme"
+msgstr "Tema a contrasto elevato inverso"
+
+#: ../themes/LowContrast/index.theme.in.h:1
+msgid "Low Contrast"
+msgstr "Contrasto ridotto"
+
+#: ../themes/LowContrast/index.theme.in.h:2
+msgid "Low contrast theme"
+msgstr "Tema a contrasto ridotto"
