--- a/po/pa.po
+++ b/po/pa.po
@@ -2,21 +2,22 @@
 # Copyright (C) 2010 gnome-themes-standard's COPYRIGHT HOLDER
 # This file is distributed under the same license as the gnome-themes-standard package.
 #
-# A S Alam <aalam@users.sf.net>, 2010.
+# A S Alam <aalam@users.sf.net>, 2010, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-themes-standard master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug."
 "cgi?product=gnome-themes-standard&component=general\n"
-"POT-Creation-Date: 2010-11-25 00:55+0000\n"
-"PO-Revision-Date: 2010-11-25 08:43+0530\n"
+"POT-Creation-Date: 2011-03-01 17:06+0000\n"
+"PO-Revision-Date: 2011-03-03 08:24+0530\n"
 "Last-Translator: A S Alam <aalam@users.sf.net>\n"
 "Language-Team: Punjabi/Panjabi <punjabi-users@lists.sf.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.1\n"
+"X-Generator: Lokalize 1.2\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Language: pa\n"
 
 #: ../themes/Adwaita/backgrounds/adwaita.xml.in.in.h:1
 msgid "Default Background"
@@ -29,4 +30,28 @@ msgstr "ਅਡਵੇਟਾ"
 #: ../themes/Adwaita/index.theme.in.h:2
 msgid "There is only one"
 msgstr "ਸਿਰਫ਼ ਇੱਕ ਹੀ ਹੈ"
+
+#: ../themes/HighContrast/index.theme.in.h:1
+msgid "High Contrast"
+msgstr "ਵੱਧ ਕਨਟਰਾਸਟ"
+
+#: ../themes/HighContrast/index.theme.in.h:2
+msgid "High contrast theme"
+msgstr "ਵੱਧ ਕਨਟਰਾਸਟ ਥੀਮ"
+
+#: ../themes/HighContrastInverse/index.theme.in.h:1
+msgid "High Contrast Inverse"
+msgstr "ਵਧੇਰੇ ਵਖਰੇਵਾਂ ਉਲਟ"
+
+#: ../themes/HighContrastInverse/index.theme.in.h:2
+msgid "High contrast inverse theme"
+msgstr "ਵਧੇਰੇ ਵਖਰੇਵਾਂ ਉਲਟ ਥੀਮ"
+
+#: ../themes/LowContrast/index.theme.in.h:1
+msgid "Low Contrast"
+msgstr "ਘੱਟ ਕਨਟਰਾਸਟ"
+
+#: ../themes/LowContrast/index.theme.in.h:2
+msgid "Low contrast theme"
+msgstr "ਘੱਟ ਕਨਟਰਾਸਟ ਥੀਮ"
 
