--- a/po/or.po
+++ b/po/or.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug."
 "cgi?product=gnome-themes-standard&component=general\n"
-"POT-Creation-Date: 2011-02-28 15:48+0000\n"
-"PO-Revision-Date: 2011-03-07 16:23+0530\n"
+"POT-Creation-Date: 2011-03-07 10:56+0000\n"
+"PO-Revision-Date: 2011-03-07 16:44+0530\n"
 "Last-Translator: Manoj Kumar Giri <mgiri@redhat.com>\n"
 "Language-Team: Oriya <oriya-it@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -29,14 +29,6 @@ msgstr "Adwaita"
 msgid "There is only one"
 msgstr "ସେଠାରେ କେବଳ ଗୋଟିଏ ଅଛି"
 
-#: ../themes/AdwaitaLowContrast/index.theme.in.h:1
-msgid "Adwaita Low Contrast"
-msgstr "Adwaita ସ୍ୱଳ୍ପ ସ୍ପଷ୍ଟତା"
-
-#: ../themes/AdwaitaLowContrast/index.theme.in.h:2
-msgid "Low contrast variant of Adwaita"
-msgstr "Adwaita ର ସ୍ୱଳ୍ପ ସ୍ପଷ୍ଟତା ପ୍ରକାର"
-
 #: ../themes/HighContrast/index.theme.in.h:1
 msgid "High Contrast"
 msgstr "ଅଧିକ ସ୍ପଷ୍ଟତା"
@@ -53,3 +45,15 @@ msgstr "ଅଧିକ ସ୍ପଷ୍ଟତା ପ୍ରତିକୂଳ"
 msgid "High contrast inverse theme"
 msgstr "ଅଧିକ ସ୍ପଷ୍ଟତା ପ୍ରତିକୂଳ ପ୍ରସଙ୍ଗ"
 
+#: ../themes/LowContrast/index.theme.in.h:1
+#| msgid "Adwaita Low Contrast"
+msgid "Low Contrast"
+msgstr "ସ୍ୱଳ୍ପ ସ୍ପଷ୍ଟତା"
+
+#: ../themes/LowContrast/index.theme.in.h:2
+#| msgid "High contrast theme"
+msgid "Low contrast theme"
+msgstr "ସ୍ୱଳ୍ପ ସ୍ପଷ୍ଟତା ପ୍ରସଙ୍ଗ"
+
+#~ msgid "Low contrast variant of Adwaita"
+#~ msgstr "Adwaita ର ସ୍ୱଳ୍ପ ସ୍ପଷ୍ଟତା ପ୍ରକାର"
