--- a/po/sv.po
+++ b/po/sv.po
@@ -6,15 +6,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-themes-standard\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-themes-standard&component=general\n"
-"POT-Creation-Date: 2011-02-27 19:35+0000\n"
-"PO-Revision-Date: 2011-03-01 09:08+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2011-03-08 00:34+0100\n"
+"PO-Revision-Date: 2011-03-08 08:26+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 
 #: ../themes/Adwaita/backgrounds/adwaita.xml.in.in.h:1
 msgid "Default Background"
@@ -27,14 +27,6 @@ msgstr "Adwaita"
 #: ../themes/Adwaita/index.theme.in.h:2
 msgid "There is only one"
 msgstr "Det finns bara en"
-
-#: ../themes/AdwaitaLowContrast/index.theme.in.h:1
-msgid "Adwaita Low Contrast"
-msgstr "Adwaita låg kontrast"
-
-#: ../themes/AdwaitaLowContrast/index.theme.in.h:2
-msgid "Low contrast variant of Adwaita"
-msgstr "Variant av Adwaita med låg kontrast"
 
 #: ../themes/HighContrast/index.theme.in.h:1
 msgid "High Contrast"
@@ -51,4 +43,15 @@ msgstr "Omvänd hög kontrast"
 #: ../themes/HighContrastInverse/index.theme.in.h:2
 msgid "High contrast inverse theme"
 msgstr "Tema med omvänd hög kontrast"
+
+#: ../themes/LowContrast/index.theme.in.h:1
+msgid "Low Contrast"
+msgstr "Låg kontrast"
+
+#: ../themes/LowContrast/index.theme.in.h:2
+msgid "Low contrast theme"
+msgstr "Tema med låg kontrast"
+
+#~ msgid "Low contrast variant of Adwaita"
+#~ msgstr "Variant av Adwaita med låg kontrast"
 
