Update Simplified Chinese translation.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,10 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-themes-standard master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
-"themes-standard&component=general\n"
-"POT-Creation-Date: 2011-02-28 15:48+0000\n"
-"PO-Revision-Date: 2011-03-01 20:24+0800\n"
-"Last-Translator: Aron Xu <happyaron.xu@gmail.com>\n"
+"themes-standard&keywords=I18N+L10N&component=general\n"
+"POT-Creation-Date: 2011-03-12 13:05+0000\n"
+"PO-Revision-Date: 2011-03-10 11:10+0800\n"
+"Last-Translator: chiachen <luojiazhen@gmail.com>\n"
 "Language-Team: Chinese (China) <i18n-zh@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,14 +29,6 @@ msgstr "Adwaita"
 msgid "There is only one"
 msgstr "只有一个"
 
-#: ../themes/AdwaitaLowContrast/index.theme.in.h:1
-msgid "Adwaita Low Contrast"
-msgstr "低对比度 Adwaita"
-
-#: ../themes/AdwaitaLowContrast/index.theme.in.h:2
-msgid "Low contrast variant of Adwaita"
-msgstr "Adwaita 主题的低对比度衍生版"
-
 #: ../themes/HighContrast/index.theme.in.h:1
 msgid "High Contrast"
 msgstr "高对比度"
@@ -47,8 +39,19 @@ msgstr "高清主题"
 
 #: ../themes/HighContrastInverse/index.theme.in.h:1
 msgid "High Contrast Inverse"
-msgstr ""
+msgstr "高对比度反转"
 
 #: ../themes/HighContrastInverse/index.theme.in.h:2
 msgid "High contrast inverse theme"
-msgstr ""
+msgstr "高对比度反转主题"
+
+#: ../themes/LowContrast/index.theme.in.h:1
+msgid "Low Contrast"
+msgstr "低对比度"
+
+#: ../themes/LowContrast/index.theme.in.h:2
+msgid "Low contrast theme"
+msgstr "低对比度主题"
+
+#~ msgid "Low contrast variant of Adwaita"
+#~ msgstr "Adwaita 主题的低对比度衍生版"
