--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -6,15 +6,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-themes-standard 2.91.8\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-01-25 19:12+0800\n"
-"PO-Revision-Date: 2011-01-25 19:12+0800\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-themes-standard&keywords=I18N+L10N&component=general\n"
+"POT-Creation-Date: 2011-03-28 14:25+0000\n"
+"PO-Revision-Date: 2011-04-04 20:59+0800\n"
 "Last-Translator: Chao-Hsiung Liao <j_h_liau@yahoo.com.tw>\n"
 "Language-Team: Chinese (Hong Kong) <community@linuxhall.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
 
 #: ../themes/Adwaita/backgrounds/adwaita.xml.in.in.h:1
 msgid "Default Background"
@@ -27,3 +27,28 @@ msgstr "唯一"
 #: ../themes/Adwaita/index.theme.in.h:2
 msgid "There is only one"
 msgstr "只有唯一一個"
+
+#: ../themes/HighContrast/index.theme.in.h:1
+msgid "High Contrast"
+msgstr "高對比"
+
+#: ../themes/HighContrast/index.theme.in.h:2
+msgid "High contrast theme"
+msgstr "高對比主題"
+
+#: ../themes/HighContrastInverse/index.theme.in.h:1
+msgid "High Contrast Inverse"
+msgstr "高反差"
+
+#: ../themes/HighContrastInverse/index.theme.in.h:2
+msgid "High contrast inverse theme"
+msgstr "高反差主題"
+
+#: ../themes/LowContrast/index.theme.in.h:1
+msgid "Low Contrast"
+msgstr "低對比"
+
+#: ../themes/LowContrast/index.theme.in.h:2
+msgid "Low contrast theme"
+msgstr "低對比主題"
+
