--- a/po/ta.po
+++ b/po/ta.po
@@ -6,12 +6,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-themes-standard gnome-3-0\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug."
-"cgi?product=gnome-themes-standard&keywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2011-04-02 04:22+0000\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2011-09-13 21:51+0530\n"
 "PO-Revision-Date: 2011-04-02 19:31+0530\n"
 "Last-Translator: Dr.T.Vasudevan <agnihot3@gmail.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
+"Language: ta\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -53,4 +53,3 @@ msgstr "குறைந்த வேறுபாடு "
 #: ../themes/LowContrast/index.theme.in.h:2
 msgid "Low contrast theme"
 msgstr "குறைந்த வேறுபாடு கருத்து"
-
