--- a/po/te.po
+++ b/po/te.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "themes-standard&keywords=I18N+L10N&component=general\n"
 "POT-Creation-Date: 2011-09-21 19:50+0000\n"
-"PO-Revision-Date: 2011-09-23 09:46+0530\n"
+"PO-Revision-Date: 2011-09-23 15:30+0530\n"
 "Last-Translator: Praveen Illa <mail2ipn@gmail.com>\n"
 "Language-Team: తెలుగు <indlinux-telugu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -51,4 +51,4 @@ msgstr "తక్కువ వ్యత్యాసం"
 
 #: ../themes/LowContrast/index.theme.in.h:2
 msgid "Low contrast theme"
-msgstr "తక్కువ వ్యత్యాసం థీము"
+msgstr "తక్కువ వ్యత్యాస థీము"
